fix: change the wrong positioning modifier
by mistake re-wrote the modifier .table__cell_place_digits instead of
.table__text_place_digits in style.css. Fixed.

--- a/styles/style.css
+++ b/styles/style.css
@@ -202,6 +202,6 @@
   font-weight: 400;
 }
 
-.table__cell_place_digits {
+.table__text_place_digits {
   margin-top: 20px;
 }
